Fix resources ellipsis icon displaying after clicking item on mobile

--- a/client/app/components/shared/Resources.scss
+++ b/client/app/components/shared/Resources.scss
@@ -23,9 +23,11 @@
                 padding: $spacing-14 0;
     
                 .resources__hover-container {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
+                    @include Desktop() {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
                 }
             }
         }
